[package]
name = "jwt"
version = "0.1.0"
authors = ["LightDiscord <arnaud@lightdiscord.me>"]
repository = "https://github.com/LightDiscord/Jwt"
license = "MIT"
readme = "README.md"
description = "Another JWT implementation written in Rust"

[lib]
name = "libjwt"
path = "src/lib.rs"

[dependencies]
error-chain = "0.11.0"

[features]
default = []
